# GameOfLife_raylib

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Application.hpp  Button.hpp  Cell.hpp  ControlsState.hpp  Grid.hpp  MainMenuState.hpp  MusicManager.hpp  Rule.hpp  Simulation.hpp  SimulationState.hpp  State.hpp
src/: Application.cpp  Button.cpp  CMakeLists.txt  Cell.cpp  ControlsState.cpp  Grid.cpp  MainMenuState.cpp  MusicManager.cpp  Simulation.cpp  SimulationState.cpp  main.cpp
src/resources/: resources.rc
tests/: CMakeLists.txt  test_main.cpp
